(fix) styling: background, spacing

--- a/src/app/max-calculator/max-calculator.component.css
+++ b/src/app/max-calculator/max-calculator.component.css
@@ -1,7 +1,3 @@
-md-card {
-  margin-top: 20px;
-}
-
 md-card-content {
   padding-top: 20px;
 }
