--- a/src/app/warmup-calculator/warmup-calculator.component.css
+++ b/src/app/warmup-calculator/warmup-calculator.component.css
@@ -10,3 +10,7 @@
 .selected-value {
   margin: 15px 0;
 }
+
+md-toolbar {
+  margin-top: 20px;
+}
